--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
+    "g": "^2.0.1",
     "gravatar": "^1.6.0",
+    "history": "^4.7.2",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.4.0"
